[gd_scene load_steps=3 format=3 uid="uid://6sli1lyt6q4m"]

[ext_resource type="Script" path="res://core/battle/UI/piece_ui.gd" id="1_00p28"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_cf8kh"]
size = Vector2(60, 60)

[node name="PieceUI" type="Control"]
auto_translate_mode = 1
custom_minimum_size = Vector2(70, 70)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_00p28")

[node name="FocusIndicator" type="ColorRect" parent="."]
auto_translate_mode = 1
custom_minimum_size = Vector2(70, 70)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -35.0
offset_right = 35.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 0.0210619, 1)

[node name="MemberImage" type="TextureRect" parent="."]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource("PlaceholderTexture2D_cf8kh")
expand_mode = 1

[node name="ColorIndicator" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -24.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 0
grow_vertical = 0
